feat: Add sub-graph component for workflow

--- a/web/i18n/en-US/workflow.json
+++ b/web/i18n/en-US/workflow.json
@@ -205,7 +205,7 @@
   "common.runApp": "Run App",
   "common.runHistory": "Run History",
   "common.running": "Running",
-  "common.searchAgent": "Search agent",
+  "common.searchAgent": "Search agent...",
   "common.searchVar": "Search variable",
   "common.setVarValuePlaceholder": "Set variable",
   "common.showRunHistory": "Show Run History",
@@ -217,7 +217,7 @@
   "common.variableNamePlaceholder": "Variable name",
   "common.versionHistory": "Version History",
   "common.viewDetailInTracingPanel": "View details",
-  "common.viewInternals": "View internals",
+  "common.viewInternals": "View Internals",
   "common.viewOnly": "View Only",
   "common.viewRunHistory": "View run history",
   "common.workflowAsTool": "Workflow as Tool",
@@ -988,6 +988,18 @@
   "singleRun.testRun": "Test Run",
   "singleRun.testRunIteration": "Test Run Iteration",
   "singleRun.testRunLoop": "Test Run Loop",
+  "subGraphModal.canvasPlaceholder": "Click to configure the internal structure",
+  "subGraphModal.internalStructure": "Internal structure",
+  "subGraphModal.lastRun": "LAST RUN",
+  "subGraphModal.noRunHistory": "No run history yet",
+  "subGraphModal.outputVariables": "OUTPUT VARIABLES",
+  "subGraphModal.settings": "SETTINGS",
+  "subGraphModal.sourceNode": "SOURCE",
+  "subGraphModal.title": "INTERNAL STRUCTURE",
+  "subGraphModal.whenOutputIsNone": "WHEN OUTPUT IS NONE",
+  "subGraphModal.whenOutputNone.default": "Use default value",
+  "subGraphModal.whenOutputNone.error": "Raise an error",
+  "subGraphModal.whenOutputNone.skip": "Skip this step",
   "tabs.-": "Default",
   "tabs.addAll": "Add all",
   "tabs.agent": "Agent Strategy",
