--- a/web/i18n/ja-JP/workflow.json
+++ b/web/i18n/ja-JP/workflow.json
@@ -203,7 +203,7 @@
   "common.runApp": "アプリを実行",
   "common.runHistory": "実行履歴",
   "common.running": "実行中",
-  "common.searchAgent": "エージェントを検索",
+  "common.searchAgent": "エージェントを検索...",
   "common.searchVar": "変数を検索",
   "common.setVarValuePlaceholder": "変数値を設定",
   "common.showRunHistory": "実行履歴を表示",
@@ -215,7 +215,7 @@
   "common.variableNamePlaceholder": "変数名を入力",
   "common.versionHistory": "バージョン履歴",
   "common.viewDetailInTracingPanel": "詳細を表示",
-  "common.viewInternals": "内部を表示",
+  "common.viewInternals": "内部構造を表示",
   "common.viewOnly": "閲覧のみ",
   "common.viewRunHistory": "実行履歴を表示",
   "common.workflowAsTool": "ワークフローをツールとして公開する",
@@ -985,6 +985,18 @@
   "singleRun.testRun": "テスト実行",
   "singleRun.testRunIteration": "テスト実行（イテレーション）",
   "singleRun.testRunLoop": "テスト実行ループ",
+  "subGraphModal.canvasPlaceholder": "クリックして内部構造を設定",
+  "subGraphModal.internalStructure": "内部構造",
+  "subGraphModal.lastRun": "前回の実行",
+  "subGraphModal.noRunHistory": "実行履歴がありません",
+  "subGraphModal.outputVariables": "出力変数",
+  "subGraphModal.settings": "設定",
+  "subGraphModal.sourceNode": "ソース",
+  "subGraphModal.title": "内部構造",
+  "subGraphModal.whenOutputIsNone": "出力が空の場合",
+  "subGraphModal.whenOutputNone.default": "デフォルト値を使用",
+  "subGraphModal.whenOutputNone.error": "エラーを発生させる",
+  "subGraphModal.whenOutputNone.skip": "このステップをスキップ",
   "tabs.-": "デフォルト",
   "tabs.addAll": "すべてを追加する",
   "tabs.agent": "エージェント戦略",
