--- a/web/i18n/zh-Hans/workflow.json
+++ b/web/i18n/zh-Hans/workflow.json
@@ -171,7 +171,7 @@
   "common.needConnectTip": "此节点尚未连接到其他节点",
   "common.needOutputNode": "必须添加输出节点",
   "common.needStartNode": "必须添加至少一个开始节点",
-  "common.noAgentNodes": "没有可用的代理节点",
+  "common.noAgentNodes": "没有可用的 Agent 节点",
   "common.noHistory": "没有历史版本",
   "common.noVar": "没有变量",
   "common.notRunning": "尚未运行",
@@ -203,7 +203,7 @@
   "common.runApp": "运行",
   "common.runHistory": "运行历史",
   "common.running": "运行中",
-  "common.searchAgent": "搜索代理",
+  "common.searchAgent": "搜索 Agent...",
   "common.searchVar": "搜索变量",
   "common.setVarValuePlaceholder": "设置变量值",
   "common.showRunHistory": "显示运行历史",
@@ -215,7 +215,7 @@
   "common.variableNamePlaceholder": "变量名",
   "common.versionHistory": "版本历史",
   "common.viewDetailInTracingPanel": "查看详细信息",
-  "common.viewInternals": "查看内部",
+  "common.viewInternals": "查看内部结构",
   "common.viewOnly": "只读",
   "common.viewRunHistory": "查看运行历史",
   "common.workflowAsTool": "发布为工具",
@@ -986,6 +986,18 @@
   "singleRun.testRun": "测试运行",
   "singleRun.testRunIteration": "测试运行迭代",
   "singleRun.testRunLoop": "测试运行循环",
+  "subGraphModal.canvasPlaceholder": "点击配置内部结构",
+  "subGraphModal.internalStructure": "内部结构",
+  "subGraphModal.lastRun": "上次运行",
+  "subGraphModal.noRunHistory": "暂无运行记录",
+  "subGraphModal.outputVariables": "输出变量",
+  "subGraphModal.settings": "设置",
+  "subGraphModal.sourceNode": "来源",
+  "subGraphModal.title": "内部结构",
+  "subGraphModal.whenOutputIsNone": "当输出为空时",
+  "subGraphModal.whenOutputNone.default": "使用默认值",
+  "subGraphModal.whenOutputNone.error": "抛出错误",
+  "subGraphModal.whenOutputNone.skip": "跳过此步骤",
   "tabs.-": "默认",
   "tabs.addAll": "添加全部",
   "tabs.agent": "Agent 策略",
