--- a/web/i18n/zh-Hant/workflow.json
+++ b/web/i18n/zh-Hant/workflow.json
@@ -171,7 +171,7 @@
   "common.needConnectTip": "此節點尚未連接到其他節點",
   "common.needOutputNode": "必須新增輸出節點",
   "common.needStartNode": "至少必須新增一個起始節點",
-  "common.noAgentNodes": "沒有可用的代理節點",
+  "common.noAgentNodes": "沒有可用的 Agent 節點",
   "common.noHistory": "無歷史記錄",
   "common.noVar": "沒有變數",
   "common.notRunning": "尚未運行",
@@ -203,7 +203,7 @@
   "common.runApp": "運行",
   "common.runHistory": "運行歷史",
   "common.running": "運行中",
-  "common.searchAgent": "搜索代理",
+  "common.searchAgent": "搜尋 Agent...",
   "common.searchVar": "搜索變數",
   "common.setVarValuePlaceholder": "設置變數值",
   "common.showRunHistory": "顯示運行歷史",
@@ -215,7 +215,7 @@
   "common.variableNamePlaceholder": "變數名",
   "common.versionHistory": "版本歷史",
   "common.viewDetailInTracingPanel": "查看詳細信息",
-  "common.viewInternals": "查看內部",
+  "common.viewInternals": "檢視內部結構",
   "common.viewOnly": "只讀",
   "common.viewRunHistory": "查看運行歷史",
   "common.workflowAsTool": "發佈為工具",
@@ -985,6 +985,18 @@
   "singleRun.testRun": "測試運行",
   "singleRun.testRunIteration": "測試運行迭代",
   "singleRun.testRunLoop": "測試運行循環",
+  "subGraphModal.canvasPlaceholder": "點擊配置內部結構",
+  "subGraphModal.internalStructure": "內部結構",
+  "subGraphModal.lastRun": "上次執行",
+  "subGraphModal.noRunHistory": "暫無執行記錄",
+  "subGraphModal.outputVariables": "輸出變數",
+  "subGraphModal.settings": "設定",
+  "subGraphModal.sourceNode": "來源",
+  "subGraphModal.title": "內部結構",
+  "subGraphModal.whenOutputIsNone": "當輸出為空時",
+  "subGraphModal.whenOutputNone.default": "使用預設值",
+  "subGraphModal.whenOutputNone.error": "拋出錯誤",
+  "subGraphModal.whenOutputNone.skip": "跳過此步驟",
   "tabs.-": "預設",
   "tabs.addAll": "全部新增",
   "tabs.agent": "代理策略",
