feat(sandbox-provider): update UI to match Figma design
- Update settings icon to RiEqualizer2Line
- Add 4px rounded container for provider icons in config modal
- Update section titles to uppercase style
- Change switch modal confirm button to warning variant
- Add i18n keys for setAsActive, readDocLink, securityTip

--- a/web/i18n/en-US/common.json
+++ b/web/i18n/en-US/common.json
@@ -571,11 +571,14 @@
   "sandboxProvider.configModal.e2bTemplate": "E2B Template",
   "sandboxProvider.configModal.e2bTemplatePlaceholder": "code-interpreter-v1",
   "sandboxProvider.configModal.readDoc": "Read Documentation",
+  "sandboxProvider.configModal.readDocLink": "Read {{provider}} Docs",
   "sandboxProvider.configModal.revoke": "Revoke",
   "sandboxProvider.configModal.save": "Save",
-  "sandboxProvider.configModal.title": "Configure - {{provider}}",
-  "sandboxProvider.connected": "Connected",
-  "sandboxProvider.currentProvider": "Current Provider",
+  "sandboxProvider.configModal.securityTip": "Your API Token will be encrypted and stored using",
+  "sandboxProvider.configModal.securityTipTechnology": "technology.",
+  "sandboxProvider.configModal.title": "Configure Sandbox Provider",
+  "sandboxProvider.connected": "CONNECTED",
+  "sandboxProvider.currentProvider": "CURRENT ACTIVE",
   "sandboxProvider.daytona.description": "Secure sandboxed cloud environments for AI agents. learn more",
   "sandboxProvider.daytona.label": "Daytona",
   "sandboxProvider.docker.description": "Secure sandboxed cloud environments for AI agents. learn more",
@@ -588,9 +591,10 @@
   "sandboxProvider.managedBySaas": "Managed by SaaS",
   "sandboxProvider.noPermission": "Contact the workspace administrator to make changes.",
   "sandboxProvider.notConfigured": "Not Configured",
-  "sandboxProvider.otherProvider": "Other Provider",
+  "sandboxProvider.otherProvider": "OTHER PROVIDERS",
+  "sandboxProvider.setAsActive": "Set as Active",
   "sandboxProvider.switchModal.cancel": "Cancel",
-  "sandboxProvider.switchModal.confirm": "Switch Provider",
+  "sandboxProvider.switchModal.confirm": "Switch",
   "sandboxProvider.switchModal.confirmText": "You are about to switch the active sandbox provider to {{provider}}.",
   "sandboxProvider.switchModal.title": "Switch Active Provider?",
   "sandboxProvider.switchModal.warning": "Impact on running agents",
