--- a/web/i18n/zh-Hans/common.json
+++ b/web/i18n/zh-Hans/common.json
@@ -569,11 +569,14 @@
   "sandboxProvider.configModal.e2bTemplate": "E2B 模板",
   "sandboxProvider.configModal.e2bTemplatePlaceholder": "code-interpreter-v1",
   "sandboxProvider.configModal.readDoc": "查看文档",
+  "sandboxProvider.configModal.readDocLink": "查看 {{provider}} 文档",
   "sandboxProvider.configModal.revoke": "撤销",
   "sandboxProvider.configModal.save": "保存",
-  "sandboxProvider.configModal.title": "配置 - {{provider}}",
+  "sandboxProvider.configModal.securityTip": "您的 API Token 将使用",
+  "sandboxProvider.configModal.securityTipTechnology": "技术加密存储。",
+  "sandboxProvider.configModal.title": "配置 Sandbox Provider",
   "sandboxProvider.connected": "已连接",
-  "sandboxProvider.currentProvider": "当前供应商",
+  "sandboxProvider.currentProvider": "当前激活",
   "sandboxProvider.daytona.description": "为 AI 代理提供安全的沙箱云环境。了解更多",
   "sandboxProvider.daytona.label": "Daytona",
   "sandboxProvider.docker.description": "为 AI 代理提供安全的沙箱云环境。了解更多",
@@ -587,8 +590,9 @@
   "sandboxProvider.noPermission": "请联系工作空间管理员进行更改。",
   "sandboxProvider.notConfigured": "未配置",
   "sandboxProvider.otherProvider": "其他供应商",
+  "sandboxProvider.setAsActive": "设为激活",
   "sandboxProvider.switchModal.cancel": "取消",
-  "sandboxProvider.switchModal.confirm": "切换供应商",
+  "sandboxProvider.switchModal.confirm": "切换",
   "sandboxProvider.switchModal.confirmText": "您即将将活动沙箱供应商切换为 {{provider}}。",
   "sandboxProvider.switchModal.title": "切换活动供应商？",
   "sandboxProvider.switchModal.warning": "对运行中的代理的影响",
