fix(sandbox-provider): update provider descriptions to match Figma design
Update E2B, Daytona, and Docker descriptions with unique copy from design:
- E2B: "E2B Gives AI Agents Secure Computers with Real-World Tools."
- Daytona: "Deploy AI code with confidence using Daytona's lightning-fast infrastructure."
- Docker: "The Easiest Way to Build, Run, and Secure Agents."

--- a/web/i18n/en-US/common.json
+++ b/web/i18n/en-US/common.json
@@ -579,11 +579,11 @@
   "sandboxProvider.configModal.title": "Configure Sandbox Provider",
   "sandboxProvider.connected": "CONNECTED",
   "sandboxProvider.currentProvider": "CURRENT ACTIVE",
-  "sandboxProvider.daytona.description": "Secure sandboxed cloud environments for AI agents. learn more",
+  "sandboxProvider.daytona.description": "Deploy AI code with confidence using Daytona's lightning-fast infrastructure.",
   "sandboxProvider.daytona.label": "Daytona",
-  "sandboxProvider.docker.description": "Secure sandboxed cloud environments for AI agents. learn more",
+  "sandboxProvider.docker.description": "The Easiest Way to Build, Run, and Secure Agents.",
   "sandboxProvider.docker.label": "Docker",
-  "sandboxProvider.e2b.description": "Secure sandboxed cloud environments for AI agents. learn more",
+  "sandboxProvider.e2b.description": "E2B Gives AI Agents Secure Computers with Real-World Tools.",
   "sandboxProvider.e2b.label": "E2B",
   "sandboxProvider.enable": "Enable",
   "sandboxProvider.local.description": "This mode will provide the host machine as an agent, and its use in production is not recommended.",
