--- a/web/i18n/zh-Hans/common.json
+++ b/web/i18n/zh-Hans/common.json
@@ -577,11 +577,11 @@
   "sandboxProvider.configModal.title": "配置 Sandbox Provider",
   "sandboxProvider.connected": "已连接",
   "sandboxProvider.currentProvider": "当前激活",
-  "sandboxProvider.daytona.description": "为 AI 代理提供安全的沙箱云环境。了解更多",
+  "sandboxProvider.daytona.description": "使用 Daytona 的高性能基础设施，自信地部署 AI 代码。",
   "sandboxProvider.daytona.label": "Daytona",
-  "sandboxProvider.docker.description": "为 AI 代理提供安全的沙箱云环境。了解更多",
+  "sandboxProvider.docker.description": "构建、运行和保护代理的最简单方式。",
   "sandboxProvider.docker.label": "Docker",
-  "sandboxProvider.e2b.description": "为 AI 代理提供安全的沙箱云环境。了解更多",
+  "sandboxProvider.e2b.description": "E2B 为 AI 代理提供真实世界工具的安全计算环境。",
   "sandboxProvider.e2b.label": "E2B",
   "sandboxProvider.enable": "启用",
   "sandboxProvider.local.description": "此模式将主机作为代理提供，不建议在生产环境中使用。",
