add validation for output name & add correct placeholder

--- a/web/i18n/en-US/workflow.json
+++ b/web/i18n/en-US/workflow.json
@@ -560,6 +560,7 @@
   "nodes.humanInput.errorMsg.noDeliveryMethodEnabled": "Please enable at least one delivery method",
   "nodes.humanInput.errorMsg.noUserActions": "Please add at least one user action",
   "nodes.humanInput.formContent.hotkeyTip": "Press <Key/> to insert variable, <CtrlKey/><Key/> to insert input field",
+  "nodes.humanInput.formContent.placeholder": "Type content here",
   "nodes.humanInput.formContent.preview": "Preview",
   "nodes.humanInput.formContent.title": "Form Content",
   "nodes.humanInput.formContent.tooltip": "What users will see after opening the form. Supports Markdown formatting.",
@@ -573,6 +574,7 @@
   "nodes.humanInput.insertInputField.useConstantInstead": "Use Constant Instead",
   "nodes.humanInput.insertInputField.useVarInstead": "Use Variable Instead",
   "nodes.humanInput.insertInputField.variable": "variable",
+  "nodes.humanInput.insertInputField.variableNameInvalid": "Variable name can only contain letters, numbers, and underscores, and cannot start with a number",
   "nodes.humanInput.log.inputURL": "Input URL:",
   "nodes.humanInput.log.reason": "Reason:",
   "nodes.humanInput.log.reasonContent": "Human input required to proceed",
