--- a/web/i18n/zh-Hans/workflow.json
+++ b/web/i18n/zh-Hans/workflow.json
@@ -560,6 +560,7 @@
   "nodes.humanInput.errorMsg.noDeliveryMethodEnabled": "请至少启用一种提交方式",
   "nodes.humanInput.errorMsg.noUserActions": "请添加至少一个用户操作",
   "nodes.humanInput.formContent.hotkeyTip": "按 <Key/> 插入变量，按 <CtrlKey/><Key/> 插入输入字段",
+  "nodes.humanInput.formContent.placeholder": "在此输入内容",
   "nodes.humanInput.formContent.preview": "预览",
   "nodes.humanInput.formContent.title": "表单内容",
   "nodes.humanInput.formContent.tooltip": "用户打开表单后看到的内容。支持 Markdown 格式。",
@@ -573,6 +574,7 @@
   "nodes.humanInput.insertInputField.useConstantInstead": "使用常量代替",
   "nodes.humanInput.insertInputField.useVarInstead": "使用变量代替",
   "nodes.humanInput.insertInputField.variable": "变量",
+  "nodes.humanInput.insertInputField.variableNameInvalid": "只能包含字母、数字和下划线，且不能以数字开头",
   "nodes.humanInput.log.inputURL": "输入 URL ：",
   "nodes.humanInput.log.reason": "原因：",
   "nodes.humanInput.log.reasonContent": "需要人类输入才能继续",
