feat: add sub-graph config panel with variable selection and null handling

--- a/web/i18n/en-US/workflow.json
+++ b/web/i18n/en-US/workflow.json
@@ -989,7 +989,9 @@
   "singleRun.testRunIteration": "Test Run Iteration",
   "singleRun.testRunLoop": "Test Run Loop",
   "subGraphModal.canvasPlaceholder": "Click to configure the internal structure",
+  "subGraphModal.defaultValueHint": "Returns the value below",
   "subGraphModal.internalStructure": "Internal structure",
+  "subGraphModal.internalStructureDesc": "Internal structure of @{{name}}",
   "subGraphModal.lastRun": "LAST RUN",
   "subGraphModal.noRunHistory": "No run history yet",
   "subGraphModal.outputVariables": "OUTPUT VARIABLES",
@@ -998,7 +1000,9 @@
   "subGraphModal.title": "INTERNAL STRUCTURE",
   "subGraphModal.whenOutputIsNone": "WHEN OUTPUT IS NONE",
   "subGraphModal.whenOutputNone.default": "Use default value",
+  "subGraphModal.whenOutputNone.defaultDesc": "Continue with a default value",
   "subGraphModal.whenOutputNone.error": "Raise an error",
+  "subGraphModal.whenOutputNone.errorDesc": "Pass the error to the outer workflow",
   "subGraphModal.whenOutputNone.skip": "Skip this step",
   "tabs.-": "Default",
   "tabs.addAll": "Add all",
