--- a/web/i18n/ja-JP/workflow.json
+++ b/web/i18n/ja-JP/workflow.json
@@ -986,7 +986,9 @@
   "singleRun.testRunIteration": "テスト実行（イテレーション）",
   "singleRun.testRunLoop": "テスト実行ループ",
   "subGraphModal.canvasPlaceholder": "クリックして内部構造を設定",
+  "subGraphModal.defaultValueHint": "以下の値を返す",
   "subGraphModal.internalStructure": "内部構造",
+  "subGraphModal.internalStructureDesc": "@{{name}} の内部構造",
   "subGraphModal.lastRun": "前回の実行",
   "subGraphModal.noRunHistory": "実行履歴がありません",
   "subGraphModal.outputVariables": "出力変数",
@@ -995,7 +997,9 @@
   "subGraphModal.title": "内部構造",
   "subGraphModal.whenOutputIsNone": "出力が空の場合",
   "subGraphModal.whenOutputNone.default": "デフォルト値を使用",
+  "subGraphModal.whenOutputNone.defaultDesc": "デフォルト値で続行",
   "subGraphModal.whenOutputNone.error": "エラーを発生させる",
+  "subGraphModal.whenOutputNone.errorDesc": "エラーを外部ワークフローに渡す",
   "subGraphModal.whenOutputNone.skip": "このステップをスキップ",
   "tabs.-": "デフォルト",
   "tabs.addAll": "すべてを追加する",
