--- a/web/i18n/zh-Hans/workflow.json
+++ b/web/i18n/zh-Hans/workflow.json
@@ -987,7 +987,9 @@
   "singleRun.testRunIteration": "测试运行迭代",
   "singleRun.testRunLoop": "测试运行循环",
   "subGraphModal.canvasPlaceholder": "点击配置内部结构",
+  "subGraphModal.defaultValueHint": "返回以下值",
   "subGraphModal.internalStructure": "内部结构",
+  "subGraphModal.internalStructureDesc": "@{{name}} 的内部结构",
   "subGraphModal.lastRun": "上次运行",
   "subGraphModal.noRunHistory": "暂无运行记录",
   "subGraphModal.outputVariables": "输出变量",
@@ -996,7 +998,9 @@
   "subGraphModal.title": "内部结构",
   "subGraphModal.whenOutputIsNone": "当输出为空时",
   "subGraphModal.whenOutputNone.default": "使用默认值",
+  "subGraphModal.whenOutputNone.defaultDesc": "使用默认值继续执行",
   "subGraphModal.whenOutputNone.error": "抛出错误",
+  "subGraphModal.whenOutputNone.errorDesc": "将错误传递给外部工作流",
   "subGraphModal.whenOutputNone.skip": "跳过此步骤",
   "tabs.-": "默认",
   "tabs.addAll": "添加全部",
