--- a/web/i18n/zh-Hant/workflow.json
+++ b/web/i18n/zh-Hant/workflow.json
@@ -986,7 +986,9 @@
   "singleRun.testRunIteration": "測試運行迭代",
   "singleRun.testRunLoop": "測試運行循環",
   "subGraphModal.canvasPlaceholder": "點擊配置內部結構",
+  "subGraphModal.defaultValueHint": "返回以下值",
   "subGraphModal.internalStructure": "內部結構",
+  "subGraphModal.internalStructureDesc": "@{{name}} 的內部結構",
   "subGraphModal.lastRun": "上次執行",
   "subGraphModal.noRunHistory": "暫無執行記錄",
   "subGraphModal.outputVariables": "輸出變數",
@@ -995,7 +997,9 @@
   "subGraphModal.title": "內部結構",
   "subGraphModal.whenOutputIsNone": "當輸出為空時",
   "subGraphModal.whenOutputNone.default": "使用預設值",
+  "subGraphModal.whenOutputNone.defaultDesc": "使用預設值繼續執行",
   "subGraphModal.whenOutputNone.error": "拋出錯誤",
+  "subGraphModal.whenOutputNone.errorDesc": "將錯誤傳遞給外部工作流程",
   "subGraphModal.whenOutputNone.skip": "跳過此步驟",
   "tabs.-": "預設",
   "tabs.addAll": "全部新增",
